--- a/app/src/main/res/layout/activity_board_write.xml
+++ b/app/src/main/res/layout/activity_board_write.xml
@@ -11,8 +11,10 @@
         android:id="@+id/etTitle"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/white"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:hint="제목을 입력해주세요."
         android:inputType="textPersonName"
@@ -24,7 +26,7 @@
         android:id="@+id/etContent"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/white"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:hint="내용을 입력해주세요."
         android:inputType="textPersonName"
@@ -33,12 +35,12 @@
         app:layout_constraintTop_toBottomOf="@+id/etTitle" />
 
     <ImageView
-        android:id="@+id/imgPlus"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/imgLoad"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="@+id/etContent"
+        app:layout_constraintStart_toStartOf="@+id/etContent"
         app:layout_constraintTop_toBottomOf="@+id/etContent"
         app:srcCompat="@drawable/item_add" />
 
@@ -47,17 +49,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이미지추가"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgPlus" />
+        app:layout_constraintEnd_toEndOf="@+id/imgLoad"
+        app:layout_constraintStart_toStartOf="@+id/imgLoad"
+        app:layout_constraintTop_toBottomOf="@+id/imgLoad" />
 
     <ImageView
         android:id="@+id/imgWrite"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="32dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgLoad"
         app:srcCompat="@drawable/btnwrite" />
 </androidx.constraintlayout.widget.ConstraintLayout>
